# unsafe-key-source

./: .gitignore  Cargo.toml  README-zhcn.md  README.md  _bl.py  _flash.py  build.sh  exec  memory.x  unsafe-key
.cargo/: config
src/: consts.rs  fido2_chunk.rs  fido2_commands.rs  fido2_data_struct.rs  fido2_hid_desc.rs  fido2_internal_error.rs  fido2_parser.rs  global_buffer.rs  main.rs  utils.rs
stm32flash-bin/: README.txt
